<resources>
    <string name="app_name">autolearningWords</string>
    <string name="action_settings">Settings</string>
    <string name="img_folder">icon folder</string>
    <string name="save_close">Save and close</string>
    <string name="save_new">Save and new</string>
    
    <string name="save">SAVE</string>
    <string name="close">CLOSE</string>
    <string name="name">Name</string>
    <string name="new_language">NEW LANGUAGE</string>
    <string name="new_folder">NEW FOLDER</string>

    <string name="translation">TRANSLATION</string>
    <string name="examples">EXAMPLES</string>
    <string name="original">ORIGINAL</string>
    <string name="example1">Example 1</string>
    <string name="example2">Example 2</string>
    <string name="comment">COMMENTS</string>

    <string name="item">Item</string>
    <string name="folder">Folder</string>
    <string name="add_language">ADD LANGUAGE</string>
    <string name="language_menu">  LANGUAGE  </string>
    <string name="more_menu">  MORE  </string>

    <string name="select_folder_move">Select the folder to move selected items</string>
    <string name="move">MOVE</string>

    <string name="accept">ACCEPT</string>
    <string name="failed">FAILED</string>
    <string name="correct">CORRECT</string>
    <string name="see_answer">SEE ANSWER</string>

    <string name="do_test">DO TEST</string>
    <string name="select_folder_test">Select folders to do the test</string>
    <string name="main">MAIN</string>

    <string name="comment_min">Comment</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>

    <string name="select_items_move">Selected items were moved to </string>
    <string name="undo">UNDO</string>
    <string name="removed">removed</string>

    <string name="remove_items">Do you want to remove </string>
    <string name="items_selected">items selected?</string>

    <string name="select_min">Select</string>
    <string name="remove_min">Remove</string>

    <string name="do_test_menu">Do test</string>
    <string name="help_menu">Help</string>
    <string name="contact_menu">Contact</string>
    <string name="export_data_menu">Export database</string>
    <string name="import_data_menu">Import database</string>

    <string name="remove_lang">All words will be removed, do you wish to continue?</string>
    <string name="warning_lang">You have to choose a language in order to execute this action</string>
    <string name="test_cancel_warning">The test is going to cancelled, do you wish to continue?</string>

    <string name="field_required">*Required</string>
    <string name="see_failed">SEE FAILED</string>
</resources>
